2007-01-12  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpstrokeeditor.c: fixed memory management of dash
	patterns (bug #395043).

2007-01-11  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppreview.[ch]: added transform and untransform
	methods.

	* libgimp/gimpzoompreview.c: more cleanups. Override the new
	GimpPreview methods.

	* plug-ins/common/nova.c: use the new transform functions.

	* libgimpwidgets/gimpwidgets.def: updated.

2007-01-11  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpzoompreview.c: code cleanup. Added missing sanity
	checks.

2007-01-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/fractaltrace.c: fixed spelling error pointed out
	by Ulf-D. Ehlert (bug #395384).

2007-01-10  Simon Budig  <simon@gimp.org>

	* modules/controller_linux_input.c: fix the directions of the
	relative events.

	* plug-ins/common/normalize.c: fix warning about comment starting
	inside a comment. Untabbified.

2007-01-09  Sven Neumann  <sven@gimp.org>

	* tools/gimp-remote.c (gimp_remote_find_window): check Atoms
	before using them. Fixes bug #392111.

2007-01-09  Sven Neumann  <sven@gimp.org>

	* HACKING
	* tools/pdbgen/lib.pl
	* tools/pdbgen/app.pl: fixed spelling of "auto-generated".

	* tools/pdbgen/pdb/color.pdb
	* tools/pdbgen/pdb/brush_select.pdb
	* tools/pdbgen/pdb/palette_select.pdb
	* tools/pdbgen/pdb/font_select.pdb
	* tools/pdbgen/pdb/procedural_db.pdb
	* tools/pdbgen/pdb/pattern_select.pdb
	* tools/pdbgen/pdb/drawable.pdb
	* tools/pdbgen/pdb/gradient_select.pdb: improved wording and fixed
	spelling errors.
	
	* libgimp/gimp.c: fixed spelling errors.

	* app/pdb/*.h: 
	* libgimp/gimp*_pdb.[ch]: regenerated.

2007-01-08  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c: increased statusbar message timeout
	to 5 seconds.

2007-01-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/difference-clouds.scm: removed wrong
	and useless call to gimp-drawable-update.
